Fixes dropdown menu color on mobile

--- a/nexaas-app/app/assets/less/partials/_dropdown.less
+++ b/nexaas-app/app/assets/less/partials/_dropdown.less
@@ -79,7 +79,7 @@
     top: auto;
     bottom: 50px;
     left: 0;
-    background-color: mainColorDark;
+    background-color: @mainColorDark;
     border-radius: 0;
 
     &-header {
